--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="img-fluid" src="img/meetinblack.png" alt="">
+                <img class="img-fluid" src="img/meetInblack.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>MeetIn</h4>
