--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="https://www.behance.net/tbteeboy4442">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Resume</a>
@@ -32,10 +32,10 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="mailto:oluwatobibabalola18@gmail.com">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="https://medium.com/@oluwatobibabalola18">Blog</a>
               </li>
             </ul>
           </div>
@@ -52,14 +52,14 @@
                   <div class="introduction-heading ">I design digital products and create beautiful experience for the users.</div>
                   <div class="introduction-heading">Beyond digital product design, I write front end codes too!</div>
                   <a class="btn btn-primary btn-lg button" href="#"><span>Hire Me</span></a>
-                  <div class="icons">
+                  <div class=" col-lg-6 my-auto icons">
                       <!-- <div class="col-md-4 col-md-push-0 col-sm-6 col-sm-push-0 col-xs-6 col-xs-push-0"> -->
-                          <ul class="push-social">
-                              <li><a href="#"><i class="fa fa-instagram fa-2x" style="margin-left: -35px; margin-right: 24px;"></i></a></li>
-                              <li><a href="#"><i class="fa fa-behance fa-2x m-4"></i></a></li>                                
-                              <li><a href="#"><i class="fa fa-twitter fa-2x m-4"></i></a></li>
-                              <li><a href="#"><i class="fa fa-dribbble fa-2x m-4"></i></a></li>
-                              <li><a href="#"><i class="fa fa-github fa-2x m-4"></i></a></li>
+                          <ul class="list-inline push-social">
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-instagram fa-2x" style="margin-left: -35px; margin-right: 24px;"></i></a></li>
+                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442"><i class="fa fa-behance fa-2x mr-3"></i></a></li>                                
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-2x mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-dribbble fa-2x mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola"><i class="fa fa-github fa-2x mr-3"></i></a></li>
                           </ul>
                       <!-- </div> -->
                   </div>                  
@@ -142,15 +142,15 @@
               <li class="list-inline-item">
                 <a href="#">Portfolio</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a href="#">Resume</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a href="#">About me</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a href="#">Contact</a>
               </li>
@@ -165,7 +165,7 @@
                 </a>
               </li>
               <li class="list-inline-item mr-3">
-                <a href="#">
+                <a href="https://www.behance.net/tbteeboy4442">
                   <i class="fa fa-behance fa-2x fa-fw"></i>
                 </a>
               </li>
@@ -180,7 +180,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/oluwatobibabalola">
                   <i class="fa fa-github fa-2x fa-fw"></i>
                 </a>
               </li>
