--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="https://app.plum.io/profile/oluwatobibabalola">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="mailto:oluwatobibabalola18@gmail.com">Contact</a>
