--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
       </nav>
 
     <!-- Header -->
-      <header class="mainhead">
+      <header class="mainhead text-center">
           <div class="container">
               <div class="introduction-text">
                   <div class="introduction-lead">
-                      Hi, I am Oluwatobi
+                      Oluwatobi Babalola
                   </div>
-                  <div class="introduction-heading ">I design digital products and create beautiful experience for the users.</div>
-                  <div class="introduction-heading">Beyond digital product design, I write front end codes too!</div>
+                  <div class="introduction-heading ">UI/UX Designer</div>
+                  <div class="introduction-heading"></div>
                   <a class="btn btn-primary btn-lg button" href="#"><span>Hire Me</span></a>
                   <div class=" col-lg-6 my-auto icons">
                       <!-- <div class="col-md-4 col-md-push-0 col-sm-6 col-sm-push-0 col-xs-6 col-xs-push-0"> -->
-                          <ul class="list-inline push-social">
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-instagram fa-2x" style="margin-left: -35px; margin-right: 24px;"></i></a></li>
-                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442"><i class="fa fa-behance fa-2x mr-3"></i></a></li>                                
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-2x mr-3"></i></a></li>
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-dribbble fa-2x mr-3"></i></a></li>
-                              <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola"><i class="fa fa-github fa-2x mr-3"></i></a></li>
+                          <ul class="list-inline mt-5 push-social">
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-instagram" style="margin-right: 24px;"></i></a></li>
+                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442"><i class="fa fa-behance mr-3"></i></a></li>                                
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-twitter mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="#"><i class="fa fa-dribbble mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola"><i class="fa fa-github mr-3"></i></a></li>
                           </ul>
                       <!-- </div> -->
                   </div>                  
