--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="scripts/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 <body>
     
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark" "id="mainNav">
         <div class="container">
-          <a class="navbar-brand" href="#page-top"><img src="img/Logo.svg" style = "width:150px; height: 50px" alt="Oluwatobi"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/Logo.svg" style = "width:150px; height: 50px" alt="Oluwatobi"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
@@ -23,19 +23,19 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.behance.net/tbteeboy4442">Portfolio</a>
+                <a class="nav-link" href="https://www.behance.net/tbteeboy4442" target="_blank">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Resume</a>
+                <a class="nav-link" href="resume/ob.pdf" target="_blank">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://app.plum.io/profile/oluwatobibabalola">About</a>
+                <a class="nav-link" href="about.html" target="_blank">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mailto:oluwatobibabalola18@gmail.com">Contact</a>
+                <a class="nav-link" href="mailto:oluwatobibabalola18@gmail.com" target="_blank">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://medium.com/@oluwatobibabalola18">Blog</a>
+                <a class="nav-link" href="https://medium.com/@oluwatobibabalola18" target="_blank">Blog</a>
               </li>
             </ul>
           </div>
@@ -50,16 +50,16 @@
                       Oluwatobi Babalola
                   </div>
                   <div class="introduction-heading ">UI/UX Designer</div>
-                  <div class="introduction-heading"></div>
+                  <div class="introduction-heading">Front End Developer</div>
                   <a class="btn btn-primary btn-lg button" href="#"><span>Hire Me</span></a>
-                  <div class=" col-lg-6 my-auto icons">
+                  <div class=" col-lg-12 my-auto icons">
                       <!-- <div class="col-md-4 col-md-push-0 col-sm-6 col-sm-push-0 col-xs-6 col-xs-push-0"> -->
                           <ul class="list-inline mt-5 push-social">
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-instagram" style="margin-right: 24px;"></i></a></li>
-                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442"><i class="fa fa-behance mr-3"></i></a></li>                                
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-twitter mr-3"></i></a></li>
-                              <li class="list-inline-item"><a href="#"><i class="fa fa-dribbble mr-3"></i></a></li>
-                              <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola"><i class="fa fa-github mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-instagram" style="margin-right: 24px;"></i></a></li>
+                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442" target="_blank"><i class="fa fa-behance mr-3"></i></a></li>                                
+                              <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-dribbble mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola" target="_blank"><i class="fa fa-github mr-3"></i></a></li>
                           </ul>
                       <!-- </div> -->
                   </div>                  
@@ -113,7 +113,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-              <h2 class="section-heading">Let's Get In Touch!</h2>
+              <h2 class="section-heading mt-5">Let's Get In Touch!</h2>
               <hr class="my-4">
               <p class="mb-5">Ready to start a project with me? Give me a call or send me an email and I will reach out to you as soon as possible!</p>
             </div>
@@ -140,19 +140,19 @@
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">Portfolio</a>
+                <a href="#" target="_blank">Portfolio</a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
-                <a href="#">Resume</a>
+                <a href="#" target="_blank">Resume</a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
-                <a href="#">About me</a>
+                <a href="about.html" target="_blank">About me</a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="https://medium.com/@oluwatobibabalola18" target="_blank">Blog</a>
               </li>
             </ul>
             <p class="text-muted small mb-4 mb-lg-0">&copy; Oluwatobi 2018. All Rights Reserved.</p>
@@ -160,27 +160,27 @@
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto social-icon">
             <ul class="list-inline mb-0">
               <li class="list-inline-item mr-3">
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa fa-instagram fa-2x fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item mr-3">
-                <a href="https://www.behance.net/tbteeboy4442">
+                <a href="https://www.behance.net/tbteeboy4442" target="_blank">
                   <i class="fa fa-behance fa-2x fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa fa-twitter fa-2x fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa fa-dribbble fa-2x fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/oluwatobibabalola">
+                <a href="https://github.com/oluwatobibabalola" target="_blank">
                   <i class="fa fa-github fa-2x fa-fw"></i>
                 </a>
               </li>
