--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="scripts/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/Logo.svg" style="width:150px; height: 50px" alt="Oluwatobi">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -47,8 +47,27 @@
         </div>
     </nav>
 
-    I design digital products and create beautiful experience for the users. Beyond digital product design, I write front end
-    codes too!
+    <!-- Header -->
+    <div class="container">
+        <p>Hi,</p>
+        <p>I'm Oluwatobi Babalola, a UI/UX Designer. I design digital products and create beautiful experience for the users.
+            Building intelligent products that can transform the society in a positive way gives me joy, I care so much about
+            human problems and how to solve them. Beyond digital product design, I write front end codes too!
+        </p>
+        <p>
+            I have a background in Meteorology and climate science where I learnt a lot about the atmosphere, global warming,
+            climate change and the threat they pose to the earth and it's inhabitants.   
+        </p>
+        <p>During my free time, I read about smart cities.</p>
+        <p>I'm looking forward to being planted in a community where my potential as a designer and front end developer is 
+            fully explored.
+        </p>
+    </div>
+     
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="scripts/jquery/jquery.min.js"></script>
+    <script src="scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
