--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,9 @@
 <body>
     
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark" "id="mainNav">
+
+     
+     <nav class="navbar navbar-expand-lg navbav-dark" id="mainNav">
         <div class="container">
           <a class="navbar-brand" href="index.html"><img src="img/Logo.svg" style = "width:150px; height: 50px" alt="Oluwatobi"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,15 +53,14 @@
                       Oluwatobi Babalola
                   </div>
                   <div class="introduction-heading ">UI/UX Designer</div>
-                  <div class="introduction-heading">Front End Developer</div>
                   <a class="btn btn-primary btn-lg button" href="#"><span>Hire Me</span></a>
                   <div class=" col-lg-12 my-auto icons">
                       <!-- <div class="col-md-4 col-md-push-0 col-sm-6 col-sm-push-0 col-xs-6 col-xs-push-0"> -->
                           <ul class="list-inline mt-5 push-social">
                               <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-instagram" style="margin-right: 24px;"></i></a></li>
-                              <li class="list-inline-item"><a href="https://www.behance.net/tbteeboy4442" target="_blank"><i class="fa fa-behance mr-3"></i></a></li>                                
+                              <li class="list-inline-item"><a href="https://behance.net/tbteeboy4442" target="_blank"><i class="fa fa-behance mr-3"></i></a></li>                                
                               <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter mr-3"></i></a></li>
-                              <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-dribbble mr-3"></i></a></li>
+                              <li class="list-inline-item"><a href="https://dribbble.com/oluwatobi" target="_blank"><i class="fa fa-dribbble mr-3"></i></a></li>
                               <li class="list-inline-item"><a href="https://github.com/oluwatobibabalola" target="_blank"><i class="fa fa-github mr-3"></i></a></li>
                           </ul>
                       <!-- </div> -->
@@ -140,11 +142,11 @@
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#" target="_blank">Portfolio</a>
+                <a href="https://www.behance.net/tbteeboy4442" target="_blank">Portfolio</a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
-                <a href="#" target="_blank">Resume</a>
+                <a href="resume/ob.pdf" target="_blank">Resume</a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
