--- a/about.html
+++ b/about.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="scripts/font-awesome/css/font-awesome.min.css">
@@ -48,20 +65,23 @@
     </nav>
 
     <!-- Header -->
-    <div class="container">
-        <p>Hi,</p>
-        <p>I'm Oluwatobi Babalola, a UI/UX Designer. I design digital products and create beautiful experience for the users.
-            Building intelligent products that can transform the society in a positive way gives me joy, I care so much about
-            human problems and how to solve them. Beyond digital product design, I write front end codes too!
-        </p>
-        <p>
-            I have a background in Meteorology and climate science where I learnt a lot about the atmosphere, global warming,
-            climate change and the threat they pose to the earth and it's inhabitants.   
-        </p>
-        <p>During my free time, I read about smart cities.</p>
-        <p>I'm looking forward to being planted in a community where my potential as a designer and front end developer is 
-            fully explored.
-        </p>
+    <div class="container mt-5 hero-section">
+        <h1>About Me</h1>
+        <div class="mt-5">
+            <p>I'm Oluwatobi, a UI/UX Designer. I design digital products and create beautiful experience for the users.
+                Building intelligent products that can transform the society in a positive way gives me joy, I care so much about
+                human problems and how to solve them. Beyond digital product design, I write front end codes too!
+            </p>
+            <p>
+                I have a background in Meteorology and Climate Science where I learnt a lot about the atmosphere, global warming,
+                climate change and the threat they pose to the earth and it's inhabitants.   
+            </p>
+            <p>During my free time, I read about smart cities. I have hope that we can redesign cities across Africa for a
+                sustainable future.</p>
+            <p>I'm looking forward to being planted in a community where my potential as a designer and front end developer is 
+                fully explored.
+            </p>
+        </div>
     </div>
      
 
