--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oluwatobi Babalola | Product Designer</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="scripts/font-awesome/css/font-awesome.min.css">
@@ -79,26 +96,26 @@
           </div>
           <div class="row">
             <div class="col-md-4 col-sm-6 portfolio-item">
-              <a class="portfolio-link" href="#">
-                <img class="img-fluid" src="img/zerowasteblack.png" alt="">
+              <a class="portfolio-link" href="https://bit.ly/2KjtIeT">
+                <img class="img-fluid" src="img/Beautiful.png" alt="">
               </a>
               <div class="portfolio-caption">
-                <h4>ZeroWaste</h4>
+                <h4>Beautiful Experience</h4>
+                <p class="text-muted">UI Design</p>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+              <a class="portfolio-link" href="https://bit.ly/2jUftCk">
+                <img class="img-fluid" src="img/VC name.png" alt="">
+              </a>
+              <div class="portfolio-caption">
+                <h4>Visionscape App Concept</h4>
                 <p class="text-muted">Mobile App Design</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-              <a class="portfolio-link" href="#">
-                <img class="img-fluid" src="img/cashblack.png" alt="">
-              </a>
-              <div class="portfolio-caption">
-                <h4>CashCtrl</h4>
-                <p class="text-muted">Mobile App Design</p>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-              <a class="portfolio-link" href="#">
-                <img class="img-fluid" src="img/meetInblack.png" alt="">
+              <a class="portfolio-link" href="https://bit.ly/2KgrlK0">
+                <img class="img-fluid" src="img/MeetIn.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>MeetIn</h4>
@@ -136,7 +153,7 @@
       </section>
 
       <!-- Footer -->
-    <footer class="footer bg-light">
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
