--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Oluwatobi Babalola | Product Designer</title>
+    <title>Oluwatobi Babalola | Product Designer | Portfolio</title>
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="mailto:oluwatobibabalola18@gmail.com" target="_blank">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://medium.com/@oluwatobibabalola18" target="_blank">Blog</a>
+                <a class="nav-link" href="https://medium.com/@oluwatobibabalola18" target="_blank">Case Study</a>
               </li>
             </ul>
           </div>
@@ -69,8 +69,8 @@
                   <div class="introduction-lead">
                       Oluwatobi Babalola
                   </div>
-                  <div class="introduction-heading ">UI/UX Designer</div>
-                  <a class="btn btn-primary btn-lg button" href="#"><span>Hire Me</span></a>
+                  <div class="introduction-heading ">UI/UX Designer &amp Front-End Developer</div>
+                  <a class="btn btn-primary btn-lg button" href="https://goo.gl/forms/7ccY2I3Wzp5rRZnD3" target="_blank"><span>Hire Me</span></a>
                   <div class=" col-lg-12 my-auto icons">
                       <!-- <div class="col-md-4 col-md-push-0 col-sm-6 col-sm-push-0 col-xs-6 col-xs-push-0"> -->
                           <ul class="list-inline mt-5 push-social">
@@ -97,7 +97,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" href="https://bit.ly/2KjtIeT">
-                <img class="img-fluid" src="img/Beautiful.png" alt="">
+                <img class="img-fluid" src="img/be.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>Beautiful Experience</h4>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" href="https://bit.ly/2jUftCk">
-                <img class="img-fluid" src="img/VC name.png" alt="">
+                <img class="img-fluid" src="img/Visionscape.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>Visionscape App Concept</h4>
@@ -177,7 +177,7 @@
             <p class="text-muted small mb-4 mb-lg-0">&copy; Oluwatobi 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto social-icon">
-            <ul class="list-inline mb-0">
+            <ul class="list-inline mb-4">
               <li class="list-inline-item mr-3">
                 <a href="#" target="_blank">
                   <i class="fa fa-instagram fa-2x fa-fw"></i>
